--- a/css/animate.css
+++ b/css/animate.css
@@ -74,7 +74,7 @@
 
 @keyframes pulse {
   from {
-    transform: scale3d(1, 1, 1);
+    transform: scale3d(1.3, 1.3, 1.3);
   }
 
   50% {
@@ -82,7 +82,7 @@
   }
 
   to {
-    transform: scale3d(1, 1, 1);
+    transform: scale3d(1.3, 1.3, 1.3);
   }
 }
 
@@ -434,7 +434,8 @@
   animation-name: bounceInRight;
 }
 
-@keyframes bounceInUp {
+@keyframes 
+ {
   from, 60%, 75%, 90%, to {
     animation-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
   }
