--- a/css/style.css
+++ b/css/style.css
@@ -102,31 +102,41 @@ p{
 	background-color: rgba(90,114,118,0);
 	transition: all .2s ease-in-out;
 }
+.navbar-header{
+	padding: 20px;
+	transition: all .2s;
+}
 
 #navbarCollapse{
+	padding-top: 20px;
 	padding-right:45px;
 	padding-left: 45px;
+	transition: all .2s;
 }
 
 #navbarCollapse li a{
 	font-size:.9em;
 	transition: color .2s ease-in-out;
 	font-weight: 700;
+	color: white;
+
 
 }
 
 #navbarCollapse li a:hover{
-	color:white;
+	color:rgba(236,240,241,.5);
 }
 
 #menuButton{
 	cursor: pointer;
+	color:white;
 }
 
 
 #navContainer{
 	transition: all .2s ease-in-out;
 }
+
 /* <------------------Text Animation-------------> */
 
 @keyframes cambiar{
@@ -277,7 +287,7 @@ p{
 	transition:all .2s ease-out;
 }
 .active{
-	background-color:rgba(29,18,35,.7);
+	background-color:rgba(5,89,91,.7);
 }
 
 
@@ -322,7 +332,7 @@ p{
 }
 
 #dCare-container-fluid{
-	background-color: rgba(49,51,62,.7);
+	background-color: rgba(5,89,91,.1)
 }
 
 #dCare-row{
@@ -339,7 +349,7 @@ p{
 }
 
 #quote{
-	font-size: 2.5em;
+	font-size: 40px;
 	font-weight: 200;
 
 }
