--- a/css/style.css
+++ b/css/style.css
@@ -48,40 +48,6 @@
 	font-size: 8em;
 }
 
-/* Desktops and laptops ----------- */
-@media only screen
-and (max-width : 1224px) {
-	.main-text{
-		font-size: 4em;
-		text-align: center;
-
-	}
-	#contenedorBanner{
-		transform: scale(1.3);
-	}
-}
-
-/*phone devices*/
-
-@media only screen and (max-width : 360px){
-
-	#texto-2{
-		font-weight: 300;
-		font-size: 2em;
-	}
-
-	.main-text{
-		font-size: 12px;
-		text-align: center;
-
-	}
-
-	#contenedorBanner{
-		width: 100%;
-		padding-top: 15%;
-	}
-}
-
 #bannerRow{
 		background-color: rgba(43,41,56,0.7);
 		min-width: 100%;
@@ -126,16 +92,20 @@ p{
 	transition: all .2s;
 }
 
-#navbarCollapse li a{
+#navbarCollapse li a,.menuItem{
 	font-size:.9em;
-	transition: color .2s ease-in-out;
-	font-weight: 700;
+	transition: all .2s ease;
+	font-weight: 500;
 	color: white;
-
+	cursor: pointer;
 
 }
 
 #navbarCollapse li a:hover{
+	color:rgba(236,240,241,.5);
+}
+
+.menuItem:hover{
 	color:rgba(236,240,241,.5);
 }
 
@@ -183,6 +153,12 @@ p{
 	font-weight: 600;
 	font-family: 'Raleway', sans-serif;
 	font-size: 3.5em;
+	margin-bottom: 10px;
+}
+
+#title-paragraph{
+	color:black;
+	font-weight: 100;
 }
 
 #titleSkill p{
@@ -364,11 +340,10 @@ p{
 	min-height: 100vh;
 	background-color: #F3F3F4;
 	padding: 5% 0px;
-}	
+}
 
 .content{
 	width: 100%;
-	max-height: 400px;
 	margin: 10px 10px;
 	cursor: pointer;
  	overflow: hidden;
@@ -379,29 +354,41 @@ p{
     -moz-transition: all .2s ease;
     -o-transition: all .2s ease;
     transition: all .2s ease;
+}
 
+.content:hover{
+	transform: scale(1.01);
+	opacity: 1;
+}
+
+.content:hover img{
+	box-shadow: 7px 0 7px 0px black;
+}
+
+.content img{
+	/*Transition*/
+    -webkit-transition: all .1s ease;
+    -moz-transition: all .1s ease;
+    -o-transition: all .1s ease;
+    transition: all .1s ease;
 }
 
 .content:hover .btn{
-	background-color:rgba(48,160,126,.6);
+	background-color:rgba(49,51,62,.9);
 	color:white;
-	margin-top: -25px;
+	margin-top: -140px;
 	opacity: 1;
 }
-.content:hover{
-	opacity: 1;
-	transform: scale(1.01);
 
-}
+
 .btn{
-	
 	border: 1px solid #333;
     font-weight: 700;
     padding: 5px 10px;
     text-transform: uppercase;
     background: 0 0;
     letter-spacing: 1px;
-    margin-top: -10px;
+    margin-top: -120px;
     opacity: 0;
 
 	/*Border Radius*/
@@ -416,15 +403,28 @@ p{
     -o-transition: all .2s ease;
     transition: all .2s ease;
 }
+.project-name{
+	opacity: 0;
+	margin-left: -20px;
+	
+	/*Transition*/
+    -webkit-transition: all .1s ease;
+    -moz-transition: all .1s ease;
+    -o-transition: all .1s ease;
+    transition: all .1s ease;
+}
+
+.content:hover .project-name{
+	opacity: 1;
+	margin-left: 0px;
+}
 
 
 /* << --------------- Footer --------------------->> */
-#socialMedia{
+#socialMedia,#footer-reveal{
 	background-color: #31333E;
-}
-
-#footer-reveal{
-	background-color: #31333E;
+	max-height: 15vh;
+	padding-top:2%;
 }
 
 
@@ -432,7 +432,6 @@ p{
 	list-style: none;
 	display: inline;
 	margin:0px 15px;
-
 }
 
 .footer-section li a{
@@ -448,7 +447,7 @@ p{
 }
 
 #footerRow{
-	padding: 5% 0px;
+	
 }
 
 #copy h3{
@@ -493,5 +492,43 @@ p{
 
 .footer-section .tres:hover span{
 	color:#767676;
+
+}
+
+
+
+/*Media Queries*/
+
+/* Desktops and laptops ----------- */
+@media only screen and (max-width : 1224px) {
+	.main-text{
+		font-size: 4em;
+		text-align: center;
+
+	}
+	#contenedorBanner{
+		transform: scale(1.3);
+	}
+}
+
+/*smartphones ------------------- */
+
+@media only screen and (max-width : 360px){
+
+	#texto-2{
+		font-weight: 300;
+		font-size: 2em;
+	}
+
+	.main-text{
+		font-size: 12px;
+		text-align: center;
+
+	}
+
+	#contenedorBanner{
+		width: 100%;
+		padding-top: 15%;
+	}
 
 }
