--- a/css/style.css
+++ b/css/style.css
@@ -165,6 +165,25 @@ p{
 	font-weight: 100;
 }
 
+.title-paragraph p{
+	color:white;
+	font-weight: 100;
+	font-size: 1.2em;
+	transition: all .2s ease-in-out;
+}
+.title-paragraph h3{
+	color:white;
+	font-weight: 400;
+}
+
+.title-paragraph{
+	position: absolute;
+	margin-top: -190px;
+	opacity: 0;
+	transition: all .2s ease-out;
+}
+
+
 #titleSkill p{
 	color:black;
 	font-weight: 100;
@@ -347,7 +366,7 @@ p{
 	margin: 10px 10px;
 	cursor: pointer;
  	overflow: hidden;
- 	opacity: .8;
+	background-color: rgba(0,0,0,1);
 
 	/*Transition*/
     -webkit-transition: all .2s ease;
@@ -356,21 +375,18 @@ p{
     transition: all .2s ease;
 }
 
-.content:hover{
-	transform: scale(1.01);
-	opacity: 1;
-}
-
 .content:hover img{
-	box-shadow: 7px 0 7px 0px black;
+	opacity: .4;
+	transform: scale(1.02);
+
 }
 
 .content img{
 	/*Transition*/
-    -webkit-transition: all .1s ease;
-    -moz-transition: all .1s ease;
-    -o-transition: all .1s ease;
-    transition: all .1s ease;
+    -webkit-transition: all .2s ease-in;
+    -moz-transition: all .2s ease-in;
+    -o-transition: all .2s ease-in;
+    transition: all .2s ease-in;
 }
 
 .content:hover .btn{
@@ -406,7 +422,7 @@ p{
 .project-name{
 	opacity: 0;
 	margin-left: -20px;
-	
+
 	/*Transition*/
     -webkit-transition: all .1s ease;
     -moz-transition: all .1s ease;
@@ -414,11 +430,11 @@ p{
     transition: all .1s ease;
 }
 
-.content:hover .project-name{
-	opacity: 1;
-	margin-left: 0px;
-}
 
+.content:hover .title-paragraph{
+	margin-top: -200px;
+	opacity: 1;
+}
 
 /* << --------------- Footer --------------------->> */
 
@@ -494,7 +510,7 @@ footer{
 	position: fixed;
 	bottom: 0;
 	width: 100%;
-	z-index: -1; 
+	z-index: -1;
 }
 
 /*Media Queries*/
