--- a/css/menuIcons/menuIcons.css
+++ b/css/menuIcons/menuIcons.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?c8g69m');
-  src:  url('fonts/icomoon.eot?c8g69m#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?c8g69m') format('truetype'),
-    url('fonts/icomoon.woff?c8g69m') format('woff'),
-    url('fonts/icomoon.svg?c8g69m#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?dltdiz');
+  src:  url('fonts/icomoon.eot?dltdiz#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?dltdiz') format('truetype'),
+    url('fonts/icomoon.woff?dltdiz') format('woff'),
+    url('fonts/icomoon.svg?dltdiz#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -24,15 +24,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-facebook:before {
-  content: "\ea91";
-}
-.icon-twitter:before {
-  content: "\ea96";
-}
-.icon-github:before {
-  content: "\eab0";
-}
 .icon-menu:before {
   content: "\e900";
 }
